登陆注册以及头像功能已经写完
